Fix bug: On chrome a popup is collapsed, so change width & height of document.body

--- a/popup/style.css
+++ b/popup/style.css
@@ -1,6 +1,15 @@
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+  /* only chrome */
+  body {
+    height: 500px;
+  }
+}
+
 .commandForm {
   margin: 0;
   width: 100%;
+  height: 100%;
+  overflow: scroll;
 }
 
 .commandInput {
